getall, delete product

--- a/Project/Client/Views/Admin/ProductsManager.cshtml
+++ b/Project/Client/Views/Admin/ProductsManager.cshtml
@@ -1,8 +1,8 @@
-﻿@model List<Client.Models.Product_Model.ProductModel>
+﻿
 @{
     Layout = "_LayoutAdmin";
 }
-
+@model List<Client.Models.Product_Model.ProductModel>
 <div class="pt-3 pb-4">
     <span class="titleManager bg-success py-3 px-5 rounded-4 fw-bold text-white">Products Manager</span>
 </div>
