--- a/Project/Client/Views/Admin/ProductCreate.cshtml
+++ b/Project/Client/Views/Admin/ProductCreate.cshtml
@@ -1,4 +1,5 @@
-﻿@using Client.Models.DTO.CreateProductModel
+﻿@using Client.Models.Product_Model.DTO
+
 @model CreateProductModel
 @{
     ViewData["Title"] = "Create Product";
