--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -95,13 +95,26 @@
                                 <a class="nav-link" href="#"><i class="fa-solid fa-bell"></i></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-controller="User" asp-action="Information">
+                                <a class="nav-link d-flex" asp-controller="User" asp-action="Information">
                                     <img src="~/Image/avatar.jpeg" alt="Profile" class="rounded-circle" width="30">
-                                    <span>Tuandeptrai</span>
+                                    <span class="align-content-center px-1">Tuandeptrai</span>
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><i class="fa-solid fa-caret-down"></i></a>
+                            <li class="nav-item dropdown ml-auto">
+                                <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                </a>
+                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                                    <a class="navelement" asp-controller="User" asp-action="Register">Register</a>
+                                    <a class="navelement" asp-controller="User" asp-action="Login">Login</a>
+                                    <a class="navelement" asp-controller="Order" asp-action="History">History</a>
+                                    <a class="navelement" asp-controller="User" asp-action="Information">Information</a>
+                                    <a class="navelement" asp-controller="User" asp-action="ChangePassword">ChangePassword</a>
+                                    <a class="navelement" asp-controller="Cart" asp-action="Cart">Cart</a>
+                                    <a class="navelement" asp-controller="Product" asp-action="ProductDetail">ProductDetail</a></>
+                                    <a class="navelement" asp-controller="product" asp-action="Collection">Collection</a>
+                                    <a class="navelement" asp-controller="Admin" asp-action="AdminDashboard">AdminDashboard</a>
+                                    <a class="navelement" asp-controller="User" asp-action="EditProfile">EditProfile</a>
+                                </div>
                             </li>
                         </ul>
                     </div>
