--- a/Project/Client/Views/Admin/UsersManager.cshtml
+++ b/Project/Client/Views/Admin/UsersManager.cshtml
@@ -143,6 +143,7 @@
 						<td>
 							<a asp-action="UserUpdate" asp-route-Id="@user.Id" class="text-danger mx-2"><span><i class="fa-regular fa-pen-to-square"></i></span></a>					
 						</td>
+						<td><button class="btn btn-success" data-toggle="modal" data-target="#modalUsers" asp-action="UserUpdate" asp-route-Id="@user.Id">+ Update</button></td>
 						<td>
 							@* <form asp-action="UsersDelete" >
 								<input type="submit" value="Delete" class="btn btn-danger" /> 
@@ -403,6 +404,21 @@
 		</div>
 	</div>
 </div>
+
+@* Đây là add *@
+<div class="modal fade" id="modalUsers" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-xl">
+		<div class="modal-content">
+			<div class="container-fluid p-5">
+				@await Html.PartialAsync("UserUpdate", Model.UpdateUser)
+
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
 
 @* 	<div class="container-fluid p-5">
 		<form class="row" asp-action="Create">
