--- a/Project/Client/Views/User/Information.cshtml
+++ b/Project/Client/Views/User/Information.cshtml
@@ -1,20 +1,15 @@
-﻿
+﻿@model Client.Models.UserDTO.UpdateUser
+
 <div class="main">
     <div class="row justify-content-center">
         <div class="col-md-3 p-3">
             <div class="d-flex align-items-center mb-3 p-2 rounded border border-1">
-                <img src="~/image/history-game-1.jpg" class="rounded me-3" alt="Avatar" style="width:80px; height:80px;" />
+                <img src="@Model.Avatar" class="rounded me-3" alt="Avatar" style="width:80px; height:80px;" />
                 <div>
-                    <h5 class="mb-0">tuandeptrai1011</h5>
-                    <p class="mb-0 text-muted">tuandeptrai@gmail.com<br>10/11/2004</p>
+                    <h5 class="mb-0">@Model.DisplayName</h5>
+                    <p class="mb-0 text-muted">@Model.Email<br>@Model.PhoneNumber</p>
                 </div>
             </div>
-            @*
-            <div class="d-grid mb-4">
-            <button class="btn btn-success fw-bold" type="button">
-            <i class="fas fa-edit me-2"></i>Edit Avatar
-            </button>
-            </div> *@
 
             <!-- Danh Muc -->
             <div class="nav flex-column">
@@ -49,19 +44,21 @@
             <div class="mt-5">
                 <div class="row">
                     <div class="col-md-4">
-                        <div>
+                        @* <div>
                             <div class="text-center">
-                                <img src="~/image/history-game-1.jpg" class="rounded" alt="Avatar" style="width:150px; height:150px;" />
+                                <img src="@Model.Avatar" class="rounded" alt="Avatar" style="width:150px; height:150px;" />
                                 <div class="mt-3">
                                     <button class="btn btn-success fw-bold" type="button">
                                         <i class="fas fa-edit me-2"></i>Edit Avatar
                                     </button>
                                 </div>
                             </div>
-                        </div>
+                        </div> *@
                     </div>
                     <div class="col-md-8">
-                        <form>
+                        <!-- Bắt đầu form -->
+                        <form asp-action="Information" method="post">
+                            <input type="hidden" name="Id" value="@Model.Id" />
                             <div class="row mb-3 px-3">
                                 <div class="col-md-3 align-content-center">
                                     <div class="text-center fw-bold">
@@ -69,51 +66,61 @@
                                     </div>
                                 </div>
                                 <div class="col-md-9">
-                                    <input type="text" class="form-control" id="displayName" value="Pham Minh Tuan">
+                                    <input type="text" class="form-control" id="displayName" name="DisplayName" value="@Model.DisplayName">
                                 </div>
                             </div>
                             <div class="row mb-3 px-3">
                                 <div class="col-md-3 align-content-center">
                                     <div class="text-center fw-bold">
-                                        Display Name
+                                        Email
                                     </div>
                                 </div>
                                 <div class="col-md-9">
-                                    <input type="text" class="form-control" id="displayName" value="Pham Minh Tuan">
+                                    <input type="email" class="form-control" id="email" name="Email" value="@Model.Email">
                                 </div>
                             </div>
                             <div class="row mb-3 px-3">
                                 <div class="col-md-3 align-content-center">
                                     <div class="text-center fw-bold">
-                                        Display Name
+                                        Phone Number
                                     </div>
                                 </div>
                                 <div class="col-md-9">
-                                    <input type="text" class="form-control" id="displayName" value="Pham Minh Tuan">
+                                    <input type="text" class="form-control" id="phoneNumber" name="PhoneNumber" value="@Model.PhoneNumber">
                                 </div>
                             </div>
-                            <div class="mb-3">
-                                <input type="text" class="form-control" id="userName" placeholder="User Name">
+                            <div class="row mb-3 px-3">
+                                <div class="col-md-3 align-content-center">
+                                    <div class="text-center fw-bold">
+                                        <label asp-for="@Model.Role" class="font-weight-bold">Role</label>
+                                    </div>
+                                </div>
+                                <div class="col-md-9">
+                                    
+                                    <select asp-for="@Model.Role" class="form-control form-control-sm">
+                                        <option value="User">User</option>
+                                        <option value="Admin">Admin</option>
+                                    </select>
+                                </div>
                             </div>
-                            <div class="mb-3">
-                                <input type="email" class="form-control" id="email" placeholder="Email">
-                            </div>
-                            <div class="mb-3">
-                                <input type="text" class="form-control" id="phoneNumber" placeholder="Phone Number">
-                            </div>
-                            <div class="mb-3">
-                                <input type="text" class="form-control text-danger" id="status" placeholder="Offline" readonly>
+                            <div class="row mb-3 px-3">
+                                <div class="col-md-3 align-content-center">
+                                    <div class="text-center fw-bold">
+                                        Avatar URL
+                                    </div>
+                                </div>
+                                <div class="col-md-9">
+                                    <input type="text" class="form-control" id="avatar" name="Avatar" value="@Model.Avatar">
+                                </div>
                             </div>
                             <button type="submit" class="btn btn-success fw-bold">
                                 <i class="fas fa-save me-2"></i>Update
                             </button>
                         </form>
+                        <!-- Kết thúc form -->
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
