--- a/Project/Client/Views/Admin/ProductUpdate.cshtml
+++ b/Project/Client/Views/Admin/ProductUpdate.cshtml
@@ -1,5 +1,4 @@
-
-﻿@model Client.Models.ProductDTO.ProductModel
+@model Client.Models.ProductDTO.ProductModel
 @{
     ViewData["Title"] = "ProductUpdate";
 
