--- a/Project/Client/Views/Admin/ProductsManager.cshtml
+++ b/Project/Client/Views/Admin/ProductsManager.cshtml
@@ -1,4 +1,4 @@
-﻿@using Client.Models.Product_Model
+﻿
 
 @{
     Layout = "_LayoutAdmin";
@@ -362,7 +362,7 @@
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <div class="container-fluid p-5">
-                @await Html.PartialAsync("ProductCreate", Model.CreateProductModel)
+                @* @await Html.PartialAsync("ProductCreate", Model.CreateProductModel) *@
             </div>
         </div>
     </div>
