--- a/Project/Client/Views/Admin/ProductUpdate.cshtml
+++ b/Project/Client/Views/Admin/ProductUpdate.cshtml
@@ -1,7 +1,4 @@
-
-@* 
-
-﻿@model Client.Models.ProductDTO.ProductModel
+@model Client.Models.ProductDTO.ProductModel
 
 @{
     ViewData["Title"] = "ProductUpdate";
@@ -73,7 +70,7 @@
     </div>
 
 </div>
-
+@*
 ﻿@using Client.Models.Product_Model
 @using Client.Models.Product_Model.DTO
 @using Client.Models.Product_Model.Enum
