--- a/Project/Client/Views/Admin/ProductDelete.cshtml
+++ b/Project/Client/Views/Admin/ProductDelete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Client.Models.Product_Model.ProductModel
+﻿@model Client.Models.ProductDTO.ProductModel
 
 @{
     ViewData["Title"] = "productDelete";
