--- a/Project/Client/Views/Admin/ProductsManager.cshtml
+++ b/Project/Client/Views/Admin/ProductsManager.cshtml
@@ -322,7 +322,6 @@
                         <a asp-action="ProductDelete" asp-route-Id="@product.Id" class="text-danger mx-2"> <i class="fas fa-trash"></i></a>
                         @* <a asp-action="UsersDelete" asp-route-Id="@user.Id"> <i class="fas fa-trash"></i></a> *@
                     </td>
->>>>>>> Stashed changes
                 </tr>
             }
             <!-- Thêm các dòng dữ liệu tương tự -->
@@ -376,7 +375,7 @@
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <div class="container-fluid p-5">
-                @* @await Html.PartialAsync("ProductCreate", Model.CreateProductModel) *@
+                 @await Html.PartialAsync("ProductCreate", Model.CreateProductModel) 
             </div>
         </div>
     </div>
